# pdf-compressor

./: .gitignore  README.md  pyproject.toml
pdf_compressor/: main.py
