[tool.poetry]
name = "pdf-compressor"
version = "0.1.0"
description = "PDF Compressor made with Tkinter and Ghostscript."
authors = ["Naffah Abdulla Rasheed <mail@naffah.me>"]
readme = "README.md"
packages = [{include = "pdf_compressor"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ghostscript = "^0.7"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
